Updated form action path
Updated form submission

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
-            <form name="contact" method="POST" data-netlify="true" action="/success.html">
+            <form name="contact" method="POST" data-netlify="true" action="/thank-you" netlify-success="/thank-you">
                 <input type="hidden" name="form-name" value="contact">
                 
                 <div class="form-group">
