Added _redirects file for form handling
Added _redirects file for form handling

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
-            <form name="contact" method="POST" data-netlify="true" action="/thank-you" netlify-success="/thank-you">
-                <input type="hidden" name="form-name" value="contact">
+            <form name="contact" method="POST" data-netlify="true">
+    <input type="hidden" name="form-name" value="contact">
                 
                 <div class="form-group">
                     <label for="name">Name *</label>
