Updated form handling and added thank you page
Form handling and thank you update

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
-            <form name="contact" method="POST" data-netlify="true" netlify>
+            <form name="contact" method="POST" data-netlify="true">
                 <input type="hidden" name="form-name" value="contact">
                 
                 <div class="form-group">
