--- a/thank-you.html
+++ b/thank-you.html
@@ -1,30 +1,76 @@
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Fast Track GBP</title>
-    <meta http-equiv="refresh" content="5;url=/">
     <style>
+        :root {
+            --primary: #ff7417;
+            --secondary: #cf5a00;
+            --accent: #ffb40c;
+        }
+        
         body {
             font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
             line-height: 1.6;
             color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, var(--secondary), var(--accent));
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 2rem;
+            padding: 3rem;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-        .container {
-            background: #f8f9fa;
-            padding: 2rem;
-            border-radius: 10px;
-            margin-top: 2rem;
+
+        h1 {
+            color: var(--primary);
+            margin-bottom: 1.5rem;
+        }
+
+        p {
+            margin-bottom: 1.5rem;
+            font-size: 1.1rem;
+        }
+
+        .emoji {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 1.5rem;
+            padding: 0.75rem 1.5rem;
+            background-color: var(--primary);
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .back-link:hover {
+            background-color: var(--secondary);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Thank You for Contacting Fast Track GBP</h1>
-        <p>We've received your GBP reactivation request and will respond shortly with next steps.</p>
-        <p>You will be redirected to the homepage in 5 seconds...</p>
+        <div class="emoji">✅</div>
+        <h1>Thank You for Contacting Fast Track GBP!</h1>
+        <p>We've received your GBP reactivation request and will contact you shortly with next steps.</p>
+        <p>Our team is committed to getting your business profile back online as quickly as possible.</p>
+        <a href="/" class="back-link">Return to Homepage</a>
     </div>
 </body>
 </html>
