--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             font-size: 1.1rem;
             cursor: pointer;
             width: 100%;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s;
         }
 
         .btn:hover {
@@ -214,8 +214,12 @@
 
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
-            <form name="contact" method="POST" data-netlify="true">
-                <input type="hidden" name="form-name" value="contact">
+            <form action="https://formsubmit.co/fastrackgbp@gmail.com" method="POST">
+                <input type="hidden" name="_autoresponse" value="Thank you for contacting Fast Track GBP regarding your Google Business Profile reactivation request. This email confirms we've received your submission. Our team will review your case and contact you shortly with specific next steps and payment details. If you don't receive our follow-up email within 24 hours, please check your spam folder or reply to this email.">
+                <input type="hidden" name="_template" value="box">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_subject" value="New GBP Reactivation Request">
+                <input type="hidden" name="_next" value="https://lighthearted-unicorn-79fb4a.netlify.app/thank-you.html">
                 
                 <div class="form-group">
                     <label for="name">Name *</label>
