updated to form submission message

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="New GBP Reactivation Request">
-                <input type="hidden" name="_next" value="https://lighthearted-unicorn-79fb4a.netlify.app/thank-you.html">
+                <input type="hidden" name="_next" value="https://lighthearted-unicorn-79fb4a.netlify.app/thank-you">
                 
                 <div class="form-group">
                     <label for="name">Name *</label>
