--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         .hero h1 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
-            color: black;
+            color: white;
         }
 
         .hero p {
@@ -206,7 +206,7 @@
 
     <section class="hero">
         <h1>Reactivate Your Google Business Profile</h1>
-        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: white;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help.</p>
+        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: black;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help.</p>
         <p style="font-size: 1.6rem; color: black; font-weight: 600; margin-top: 1rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.1)">⚡ Through our <i>exclusive partnership</i> status, we deliver unparalleled <b>Google Business Profile (GBP) reactivation</b> services with industry-leading turnaround times, ensuring your business regains its online presence swiftly and efficiently. ⚡</p>
     </section>
 
@@ -224,7 +224,7 @@
             </div>
             <div class="feature-card">
                 <div class="emoji">✅</div>
-                <h3>Guaranteed Results</h3>
+                <h3>Proven Success</h3>
                 <p>Our privileged partnership status ensures higher success rates through official channels.</p>
             </div>
         </div>
