--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
         <div class="features">
             <div class="feature-card">
                 <div class="emoji">🤝</div>
-                <h3>Google Business Ambassador</h3>
-                <p>Through our official partnership with Google, we deliver the fastest GBP reactivation service available.</p>
+                <h3>Google Business Partnership</h3>
+                <p>Through our exclusive partnership with Google, we deliver the fastest GBP reactivation service available.</p>
             </div>
             <div class="feature-card">
                 <div class="emoji">⚡</div>
