--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
 </head>
 <body>
     <header class="header">
-        <h2>🚀 Fast Track Google Business Profile (GBP)</h2>
+        <h2>🚀 Fast Track Google Business Profile (GBP) Reactivation</h2>
     </header>
 
     <section class="hero">
         <h1>Reactivate Your Google Business Profile</h1>
-        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: black;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help.</p>
+        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: black;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help. We do not advise on how to reinstate your Google Business Profile, we REINSTATE your Google Business Profile.</p>
         <p style="font-size: 1.6rem; color: black; font-weight: 600; margin-top: 1rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.1)">⚡ Through our <i>exclusive partnership</i> status, we deliver unparalleled <b>Google Business Profile (GBP) reactivation</b> services with industry-leading turnaround times, ensuring your Google Business Profile (GBP) regains its online presence swiftly so your business can continue to prosper. ⚡</p>
     </section>
 
