--- a/index.html
+++ b/index.html
@@ -201,21 +201,25 @@
 </head>
 <body>
     <header class="header">
-        <h2>🚀 Fast Track Google Business Profile (GBP) Reactivation</h2>
+        <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
+            <img src="logo.png" alt="Fast Track GBP Logo" style="height: 40px; width: auto;">
+            <h2>🚀 Fast Track Google Business Profile (GBP)</h2>
+        </div>
     </header>
 
     <section class="hero">
         <h1>Reactivate Your Google Business Profile</h1>
-        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: black;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help. We do not advise on how to reinstate your Google Business Profile, we will get your Google Business Profile <i>REINSTATED</i>.</p>
-        <p style="font-size: 1.6rem; color: black; font-weight: 600; margin-top: 1rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.1)">⚡ Through our <i>exclusive partnership</i> status, we deliver unparalleled <b>Google Business Profile (GBP) reactivation</b> services with industry-leading turnaround times, ensuring your Google Business Profile (GBP) regains its online presence swiftly so your business can continue to prosper. ⚡</p>
+        <p style="font-size: 1.4rem; margin-bottom: 1.5rem; color: black;">🔍 Was your Google Business Profile suspended without warning? Appeals exhausted? We're here to help.</p>
+        <p style="font-size: 1.4rem; color: black; font-weight: 600; margin-top: 2rem;">We do not advise on how to reinstate your Google Business Profile, we will get your Google Business Profile REINSTATED.</p>
+        <p style="font-size: 1.6rem; color: black; font-weight: 600; margin-top: 2rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.1)">⚡ Through our <i>exclusive partnership</i> status, we deliver unparalleled <b>Google Business Profile (GBP) reactivation</b> services with industry-leading turnaround times, ensuring your business regains its online presence swiftly and efficiently. ⚡</p>
     </section>
 
     <div class="container">
         <div class="features">
             <div class="feature-card">
                 <div class="emoji">🤝</div>
-                <h3>Google Business Partnership</h3>
-                <p>Through our exclusive partnership with Google, we deliver the fastest GBP reactivation service available.</p>
+                <h3>Google Business Ambassador</h3>
+                <p>Through our official partnership with Google, we deliver the fastest GBP reactivation service available.</p>
             </div>
             <div class="feature-card">
                 <div class="emoji">⚡</div>
@@ -224,7 +228,7 @@
             </div>
             <div class="feature-card">
                 <div class="emoji">✅</div>
-                <h3>Proven Success</h3>
+                <h3>Guaranteed Results</h3>
                 <p>Our privileged partnership status ensures higher success rates through official channels.</p>
             </div>
         </div>
@@ -304,7 +308,9 @@
         </div>
 
         <div class="disclaimer" style="text-align: center; margin: 2rem 0; padding: 2rem; background: #f8f9fa; border-radius: 10px;">
-            <p style="max-width: 800px; margin: 0 auto; color: #666;">Unlike standard SEO firms that only provide strategic advice for GBP reinstatement - leaving you waiting weeks or months for Google to acknowledge appeals - we directly facilitate Google Business Profile (GBP) reactivation. Our standard service typically delivers GBP activation in 1-3 days, while Express Activation will typically yield GBP reactivation within 24 hours.</p>
+            <p style="max-width: 800px; margin: 0 auto; color: #666;">Unlike standard SEO firms that only provide strategic advice for GBP reinstatement - leaving you waiting weeks or months for Google to acknowledge appeals - we directly facilitate Google Business Profile (GBP) reactivation.</p>
+            <p style="max-width: 800px; margin: 1rem auto; color: #666; font-weight: bold;">We do not advise on how to reinstate your Google Business Profile, we will get your Google Business Profile REINSTATED.</p>
+            <p style="max-width: 800px; margin: 0 auto; color: #666;">Our standard service typically delivers GBP activation in 1-3 days, while Express Activation will typically yield GBP reactivation within 24 hours.</p>
             <p style="max-width: 800px; margin: 1rem auto 0; color: #888; font-size: 0.8rem;">* Timeline estimates based on historical results. We provide best efforts for reinstatement within stated timeframes.</p>
         </div>
     </div>
