thank you update and price update
price reduction, and thank you page update

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <body>
     <header class="header">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
-            <img src="logo.png" alt="Fast Track GBP Logo" style="height: 120px; width: auto;">
+            <img src="logo.png" alt="Fast Track GBP Logo" style="height: 80px; width: auto; padding: 5px;">
             <h2>🚀 Fast Track Google Business Profile (GBP)</h2>
         </div>
     </header>
@@ -303,14 +303,17 @@
         </div>
 
         <div class="pricing">
-            <p>Standard GBP Reactivation: $545 (one-time fee)</p>
-            <p>Express Activation: +$200 (total $745)</p>
+            <p>Standard GBP Reactivation: $485 (one-time fee)</p>
+            <p>Express Activation: +$200 (total $685)</p>
         </div>
 
         <div class="disclaimer" style="text-align: center; margin: 2rem 0; padding: 2rem; background: #f8f9fa; border-radius: 10px;">
             <p style="max-width: 800px; margin: 0 auto; color: #666;">Unlike standard SEO firms that only provide strategic advice for GBP reinstatement - leaving you waiting weeks or months for Google to acknowledge appeals - we directly facilitate Google Business Profile (GBP) reactivation.</p>
+            <p style="max-width: 800px; margin: 1rem auto; color: #666; font-weight: bold;">We do not advise on how to reinstate your Google Business Profile, we will get your Google Business Profile REINSTATED.</p>
             <p style="max-width: 800px; margin: 0 auto; color: #666;">Our standard service typically delivers GBP activation in 1-3 days, while Express Activation will typically yield GBP reactivation within 24 hours.</p>
             <p style="max-width: 800px; margin: 1rem auto 0; color: #888; font-size: 0.8rem;">* Timeline estimates based on historical results. We provide best efforts for reinstatement within stated timeframes.</p>
+            <p style="max-width: 800px; margin: 1rem auto 0; color: #888; font-size: 0.8rem;">Be sure to check your Junk Mail/Spam folder.</p>
+            <p style="max-width: 800px; margin: 1rem auto 0; color: #888; font-size: 0.8rem;">GBP Reactivation Services and Reviews provided by Design Right 4 U</p>
         </div>
     </div>
 
