--- a/thank-you.html
+++ b/thank-you.html
@@ -62,6 +62,12 @@
         .back-link:hover {
             background-color: var(--secondary);
         }
+
+        .note {
+            margin-top: 1.5rem;
+            font-size: 0.9rem;
+            color: #666;
+        }
     </style>
 </head>
 <body>
@@ -70,6 +76,7 @@
         <h1>Thank You for Contacting Fast Track GBP!</h1>
         <p>We've received your GBP reactivation request and will contact you shortly with next steps.</p>
         <p>Be on the lookout for an email from fastrackgbp@gmail.com that will provide next steps.</p>
+        <p class="note">Be sure to check your Junk Mail/Spam folder.</p>
         <a href="/" class="back-link">Return to Homepage</a>
     </div>
 </body>
