--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="features">
             <div class="feature-card">
                 <div class="emoji">🤝</div>
-                <h3>Google Business Ambassador</h3>
+                <h3>Strategic Google Partnership</h3>
                 <p>Through our official partnership with Google, we deliver the fastest GBP reactivation service available.</p>
             </div>
             <div class="feature-card">
