--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <div class="feature-card">
                 <div class="emoji">✅</div>
-                <h3>Guaranteed Results</h3>
+                <h3>Proven Track Record</h3>
                 <p>Our privileged partnership status ensures higher success rates through official channels.</p>
             </div>
         </div>
