--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                 <div class="form-group">
                     <label>Do you require express activation (+$200)*?</label>
                     <div style="margin: 10px 0;">
-                         <select name="express_activation" style="width: 100%; padding: 0.75rem; border: 1px solid #ddd; border-radius: 5px; font-size: 1rem;">
-                           <option value="">Please select...</option>
-                           <option value="Yes">Yes</option>
-                           <option value="No">No</option>
-                       </select>
-                   </div>
-</div>
+                        <select name="express_activation" style="width: 100%; padding: 0.75rem; border: 1px solid #ddd; border-radius: 5px; font-size: 1rem;">
+                            <option value="">Please select...</option>
+                            <option value="Yes">Yes</option>
+                            <option value="No">No</option>
+                        </select>
+                    </div>
+
                     <textarea name="appeals_details" placeholder="Additional details about appeals (optional)" rows="2"></textarea>
                 </div>
 
@@ -310,8 +310,8 @@
         </div>
 
         <div class="pricing">
-            <p>*Standard GBP Reactivation: $485 (one-time fee)</p>
-            <p>Express Activation: +$200 (total $685)</p>
+            <p>Standard GBP Reactivation: $485 (one-time fee)</p>
+            <p>*Express Activation: +$200 (total $685)</p>
         </div>
 
         <div class="disclaimer" style="text-align: center; margin: 2rem 0; padding: 2rem; background: #f8f9fa; border-radius: 10px;">
