--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Track Google Business Profile (GBP)</title>
+    <title>GBP Rescue - Emergency Google Business Profile (GBP) Recovery</title>
     <style>
         :root {
             --primary: #ff7417;
@@ -195,7 +195,7 @@
 </head>
 <body>
     <header class="header">
-        <h2>🚀 Fast Track Google Business Profile (GBP)</h2>
+        <h2>🚨 GBP Rescue - Google Business Profile (GBP) Recovery Services</h2>
     </header>
 
     <section class="hero">
@@ -226,7 +226,7 @@
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
             <form action="https://formsubmit.co/fastrackgbp@gmail.com" method="POST">
-                <input type="hidden" name="_autoresponse" value="Thank you for contacting Fast Track GBP regarding your Google Business Profile reactivation request. This email confirms we've received your submission. Our team will review your case and contact you shortly with specific next steps and payment details. If you don't receive our follow-up email within 24 hours, please check your spam folder or reply to this email.">
+                <input type="hidden" name="_autoresponse" value="Thank you for contacting GBP Rescue GBP regarding your Google Business Profile reactivation request. This email confirms we've received your submission. Our team will review your case and contact you shortly with specific next steps and payment details. If you don't receive our follow-up email within 24 hours, please check your spam folder or reply to this email.">
                 <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="New GBP Reactivation Request">
@@ -298,13 +298,13 @@
             
             <div class="testimonial-card">
                 <div class="star-rating">⭐⭐⭐⭐⭐</div>
-                <p class="testimonial-text">"My google business page got taken by google out of nowhere and anyone who knows about google knows there is no easy way to contact them to even find out why they would take your page. I was completely distraught and my phone completely STOPPED ringing. I went through two other companies that I found online claiming they could reinstate my page and they did not deliver. My page was just reinstated TODAY and all the credit goes to Fast Track GBP!"</p>
+                <p class="testimonial-text">"My google business page got taken by google out of nowhere and anyone who knows about google knows there is no easy way to contact them to even find out why they would take your page. I was completely distraught and my phone completely STOPPED ringing. I went through two other companies that I found online claiming they could reinstate my page and they did not deliver. My page was just reinstated TODAY and all the credit goes to GBP Rescue GBP!"</p>
                 <p class="testimonial-author">- Stephan T., Small Business Owner</p>
             </div>
 
             <div class="testimonial-card">
                 <div class="star-rating">⭐⭐⭐⭐⭐</div>
-                <p class="testimonial-text">"A Big Thanks to Fast Track GBP! I was having issues with my Google Business Profile and had 3 different Google product experts give me 3 different answers as to how to correct the problem. Bottom line: Fast Track got it done efficiently and for a reasonable cost! Thanks to their help, my business is once again properly listed on Google Maps, maintaining its visibility and ranking. I highly recommend Fast Track GBP for their professional and effective service in managing Google My Business listings."</p>
+                <p class="testimonial-text">"A Big Thanks to GBP Rescue GBP! I was having issues with my Google Business Profile and had 3 different Google product experts give me 3 different answers as to how to correct the problem. Bottom line: GBP Rescue got it done efficiently and for a reasonable cost! Thanks to their help, my business is once again properly listed on Google Maps, maintaining its visibility and ranking. I highly recommend GBP Rescue GBP for their professional and effective service in managing Google My Business listings."</p>
                 <p class="testimonial-author">- Eric S., Local Guide</p>
             </div>
         </div>
