Rebrand from Fast Track GBP to GBP Rescue

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="feature-card">
                 <div class="emoji">✅</div>
                 <h3>Proven Track Record</h3>
-                <p>Our privileged partnership status ensures higher success rates through official channels.</p>
+                <p>Our Privileged partnership status ensures higher success rates through official channels.</p>
             </div>
         </div>
 
