--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         <div class="form-container">
             <h2>Request Google Business Profile (GBP) Reactivation</h2>
-            <form action="https://formsubmit.co/fastrackgbp@gmail.com" method="POST">
+            <form action="https://formsubmit.co/info@gbprescue.com" method="POST">
                 <input type="hidden" name="_autoresponse" value="Thank you for contacting GBP Rescue GBP regarding your Google Business Profile reactivation request. This email confirms we've received your submission. Our team will review your case and contact you shortly with specific next steps and payment details. If you don't receive our follow-up email within 24 hours, please check your spam folder or reply to this email.">
                 <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_captcha" value="false">
