Update email on thank you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You - Fast Track GBP</title>
+    <title>Thank You - GBP Rescue</title>
     <style>
         :root {
             --primary: #ff7417;
@@ -73,9 +73,9 @@
 <body>
     <div class="container">
         <div class="emoji">✅</div>
-        <h1>Thank You for Contacting Fast Track GBP!</h1>
+        <h1>Thank You for Contacting GBP Rescue!</h1>
         <p>We've received your GBP reactivation request and will contact you shortly with next steps.</p>
-        <p>Be on the lookout for an email from fastrackgbp@gmail.com that will provide next steps.</p>
+        <p>Be on the lookout for an email from info@gbprescue.com that will provide next steps.</p>
         <p class="note">Be sure to check your Junk Mail/Spam folder.</p>
         <a href="/" class="back-link">Return to Homepage</a>
     </div>
