Updated Express Activiation wording

--- a/index.html
+++ b/index.html
@@ -290,14 +290,19 @@
       </div>
 
       <!-- Express Activation -->
-      <div style="margin-bottom: 1.5rem;">
-        <label for="express_activation" style="display:block;font-weight:600;margin-bottom:0.5rem;color:#333;">Do you require express activation (+$200)? *</label>
-        <select name="express_activation" id="express_activation" required style="width:100%;padding:0.75rem;border:2px solid #ffb370;border-radius:5px;font-size:1rem;background:#fff8f2;box-sizing:border-box;">
-          <option value="">Please select...</option>
-          <option value="Yes">Yes</option>
-          <option value="No">No</option>
-        </select>
-      </div>
+<div style="margin-bottom: 1.5rem;">
+  <label for="express_activation" style="display:block;font-weight:600;margin-bottom:0.5rem;color:#333;">
+    Do you require express activation (+$200)? <br>
+    <small style="color:#555; font-weight:400;">
+      Typical reactivation within 24 hours.
+    </small>
+  </label>
+  <select name="express_activation" id="express_activation" required style="width:100%;padding:0.75rem;border:2px solid #ffb370;border-radius:5px;font-size:1rem;background:#fff8f2;box-sizing:border-box;">
+    <option value="">Please select...</option>
+    <option value="Yes">Yes</option>
+    <option value="No">No</option>
+  </select>
+</div>
 
       <!-- Consulting Interest -->
       <div style="margin-bottom: 1.5rem;">
