Add Floating Home Button

--- a/locations/los-angeles-ca.html
+++ b/locations/los-angeles-ca.html
@@ -263,5 +263,21 @@
         <p>&copy; 2025 GBP Rescue | <a href="/">Home</a> | Emergency Profile Recovery & Consulting Services</p>
         <p>Serving Los Angeles, CA and surrounding areas</p>
     </footer>
+    </footer>
+
+    <!-- Floating Home Button -->
+    <a href="/" style="position: fixed !important; bottom: 30px; right: 30px; background: linear-gradient(135deg, #cf5a00, #ff7417); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; text-decoration: none; box-shadow: 0 4px 12px rgba(0,0,0,0.4); z-index: 9999; transition: transform 0.3s;">
+        🏠
+    </a>
+
+    <style>
+        a[href="/"]:hover {
+            transform: scale(1.1);
+        }
+    </style>
+
 </body>
+</html>
+</body>
+
 </html>
