--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <!-- CTA at bottom -->
         <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: rgba(255,180,12,0.08); border-radius: 10px;">
             <p style="font-size: 1.2rem; margin-bottom: 1rem; color: #333;">
-                Don't see your city listed?
+                Locations
             </p>
             <p style="font-size: 1.1rem; color: #666; margin-bottom: 1.5rem;">
                 We serve businesses nationwide with the same fast, reliable GBP recovery service.
