--- a/index.html
+++ b/index.html
@@ -207,13 +207,14 @@
             </div>
             
             <!-- Nav Links -->
-<div style="display: flex; gap: 2rem; align-items: center;">
-    <a href="#services" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Services</a>
-    <a href="/locations/" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Locations</a> <!-- updated link -->
-    <a href="#contact-form" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Contact</a>
-    <a href="#contact-form" style="background: linear-gradient(135deg, #cf5a00, #ff7417); color: white; padding: 0.75rem 1.5rem; border-radius: 5px; text-decoration: none; font-weight: bold; transition: all 0.3s;">Get Help Now</a>
-</div>
-
+            <div style="display: flex; gap: 2rem; align-items: center;">
+                <a href="#services" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Services</a>
+                <a href="#locations" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Locations</a>
+                <a href="#contact-form" style="color: #333; text-decoration: none; font-weight: 600; transition: color 0.3s;">Contact</a>
+                <a href="#contact-form" style="background: linear-gradient(135deg, #cf5a00, #ff7417); color: white; padding: 0.75rem 1.5rem; border-radius: 5px; text-decoration: none; font-weight: bold; transition: all 0.3s;">Get Help Now</a>
+            </div>
+        </div>
+    </nav>
     
     <!-- Mobile-friendly styles -->
     <style>
